--- a/.github/workflows/action_py_tools.yml
+++ b/.github/workflows/action_py_tools.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Configuração de Python 3.10
         uses: actions/setup-python@v1
         with:
-          python-version: 3.10
+          python-version: '3.10'
       - name: Install flake8
         run: |
           pip install flake8
