--- a/.github/workflows/action_py_tools.yml
+++ b/.github/workflows/action_py_tools.yml
@@ -18,6 +18,12 @@ jobs:
       - name: Install flake8
         run: |
           pip install flake8
+      - name: Install pytest
+        run: |
+          pip install pytest
       - name: Lint with flake8
         run: |
           flake8 .
+      - name: Verificacoes com pytest
+        run: |
+          pytest tests/
