--- a/.github/workflows/action_py_tools.yml
+++ b/.github/workflows/action_py_tools.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install pytest
         run: |
           pip install pytest
+          pip install requests
       - name: Lint with flake8
         run: |
           flake8 .
